--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "server": "json-server server.json -w -d 750 -p 3333"
+    "server": "json-server server.json -w -d 750 -p 3333",
+    "lint": "eslint \"src/**/*.+(ts|js|tsx)\"",
+    "format": "prettier \"src/**/*.+(ts|js|tsx)\" --write"
+
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -20,7 +23,20 @@
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
+    "husky": "^6.0.0",
     "json-server": "^0.16.3",
+    "lint-staged": "^11.0.0",
     "typescript": "^4.2.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "link-staged": {
+    "./src/**/*.{ts,js,jsx,tsx}": [
+      "yarn lint --fix",
+      "yarn format"
+    ]
   }
 }
